# map-to-curve

./: .gitignore  Cargo.toml  README.md
noir_map_to_curve/: Nargo.toml  Prover.toml
noir_map_to_curve/src/: main.nr
noir_mimc_baseline/: Nargo.toml
noir_mimc_baseline/src/: main.nr
src/: main.rs
