[package]
name = "map-to-curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-test-curves = "0.5.0"
ark-std = "0.5.0"
ark-bn254 = "0.5.0"
ark-grumpkin = "0.5.0"